# gemmi-stubs

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
gemmi-stubs/: __init__.pyi  setup.py
gemmi-stubs/cif/: __init__.pyi
